fix: enhance awards track appearance by adjusting box-shadow for better visibility

--- a/vidma-ui/src/common/awards.css
+++ b/vidma-ui/src/common/awards.css
@@ -34,12 +34,13 @@
   gap: 25px;
   animation: scroll 60s linear infinite;
   width: max-content;
+  padding-bottom: 10px;
 }
 
 .award-card {
   background: #fff;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.219);
   width: 300px;
   height: 100%;
   flex-shrink: 0;
